--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,9 @@
 html,
 body,
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
   margin: 0;
   padding: 0;
   -webkit-touch-callout: none;
@@ -16,8 +17,4 @@ body,
   -ms-user-select: none;
   user-select: none;
   background: rgb(8, 23, 71);
-}
-
-body {
-  font-family: helvetica, arial, sans-serif;
 }
